RESOLVED FIXED278495
[Writing Tools] WebContent crashes during teardown after performing animations
https://bugs.webkit.org/show_bug.cgi?id=278495
Summary [Writing Tools] WebContent crashes during teardown after performing animations
Aditya Keerthi
Reported 2024-08-21 15:10:42 PDT
Attachments
Aditya Keerthi
Comment 1 2024-08-22 12:02:00 PDT
EWS
Comment 2 2024-08-22 16:02:15 PDT
Committed 282637@main (b11448bd2e64): <https://commits.webkit.org/282637@main> Reviewed commits have been landed. Closing PR #32601 and removing active labels.
EWS
Comment 3 2024-08-26 16:20:13 PDT
Committed 280938.276@safari-7619-branch (45a6198a712c): <https://commits.webkit.org/280938.276@safari-7619-branch> Reviewed commits have been landed. Closing PR #1659 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.